feat: sprint 4 funtionalities